<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">RoomBidRent</string>
    <string name="non_member_home_welcome_note">Welcome to RoomBidRent!</string>
    <string name="non_member_home_paragraph">Create an account and sign in to bid for your
favourite properties, receive email alerts for new results and much more.</string>
    <string name="footer_note">RoomBidRent UK 2018</string>
    <!-- sign in -->
    <string name="sign_in_welcome_note">Welcome Back!</string>
    <string name="sign_in_paragraph">It is great to see you again. We hope your search is going well.</string>
    <string name="sign_up_create_password_paragraph">Your password must be 8 or more characters long.
        Do not use any common passwords, repetition or sequences. Try making is longer or adding symbols
        like !, # or %.</string>
    <string name="sign_up_joining_top_paragraph">Whether its your first time using RoomBidRent or you are
    one of our original bidders, please commit to respecting and including everyone in the  RoomBidRent Community.</string>
    <string name="sign_up_joining_bottom_paragraph">I agree to treat everyone in the RoomBidRent community - regardless
        of their race, religion, national origin, ethnicuty, disability, sex, gender, identity, sexual orientation or age
        - with respect and without judgement or bias.</string>
    <string name="title_activity_member_dashboard">RoomBidRent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile_dashboard">RoomBidRent</string>
    <string name="title_activity_user_profile">RoomBidRent</string>
    <string name="title_activity_edit_user_profile">RoomBidRent</string>
    <string name="title_activity_manage_advert_dashboard">RoomBidRent</string>
    <string name="title_activity_message_dashboard">RoomBidRent</string>
    <string name="title_activity_account_settings_dashboard">RoomBidRent</string>
    <string name="title_activity_member_property_search">RoomBidRent</string>
    <string name="title_activity_create_advert_step1">RoomBidRent</string>
    <string name="title_activity_create_advert_step2">RoomBidRent</string>
    <string name="title_activity_create_advert_step3">RoomBidRent</string>
    <string name="title_activity_create_advert_step4">RoomBidRent</string>
    <string name="title_activity_create_advert_step5">RoomBidRent</string>
    <string name="title_activity_create_advert_step6">RoomBidRent</string>
    <string name="title_activity_my_advert_step1">RoomBidRent</string>
    <string name="title_activity_saved_advert_step1">RoomBidRent</string>
    <string name="title_activity_manage_advert_account_settings_step1">RoomBidRent</string>
    <string name="title_activity_manage_advert_individual_ad_bids">RoomBidRent</string>
    <string name="title_activity_manage_advert_individual_ad_bids_step1"> RoomBidRent </string>
    <string name="title_activity_manage_advert_stats">RoomBidRent</string>
    <string name="title_activity_manage_advert_ranking">RoomBidRent</string>
    <string name="title_activity_manage_advert_faq">RoomBidRent</string>

    <string-array name="i_have_for_rent_spinner_options">
        <item>1 Room</item>
        <item>2 Rooms</item>
        <item>3 Rooms</item>
        <item>4 Rooms</item>
        <item>5 Rooms</item>
        <item>6 Rooms</item>
    </string-array>

    <string-array name="size_of_property_spinner_options">
        <item>1 Bed</item>
        <item>2 Beds</item>
        <item>3 Beds</item>
        <item>4 Beds</item>
        <item>5 Beds</item>
    </string-array>

    <string-array name="type_of_property_spinner_options">
        <item>Flat/Apartment</item>
        <item>Options 2</item>
        <item>Options 3</item>
    </string-array>

    <string-array name="area_spinner_options">
        <item>London</item>
        <item>London 123</item>
        <item>London 321</item>
    </string-array>

    <string name="parking">Parking</string>
    <string name="balcony_patio">Balcony/patio</string>
    <string name="garden_rootTerrace">Garden/roof terrace</string>
    <string name="disabled_access">Disabled access</string>
    <string name="garage">Garage</string>
    <string-array name="minimum_spinner_options">
        <item>No Minimum</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
    </string-array>
    <string-array name="maximum_spinner_options">
        <item>No Maximum</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
    </string-array>
    <string-array name="smoking_spinner_options">
        <item>No Preference</item>
        <item>Yes</item>
    </string-array>
    <string-array name="occupation_spinner_options">
        <item>No Preference</item>
        <item>Yes</item>
    </string-array>
    <string-array name="pets_spinner_options">
        <item>No Preference</item>
        <item>Yes</item>
    </string-array>
    <string name="daily_email_alerts">Yes, please send me daily summary emails of new Rooms Wanted ad</string>
    <string name="instant_email_alerts">Yes, please send me emails of new Rooms Wanted adverts matching my requirements as soon as they are placed on the website</string>
    <string name="title_activity_manage_advert_account_settings_step"> RoomBidRent </string>
    <string name="title_activity_my_advert_step2">RoomBidRent</string>
    <string name="title_activity_member_property_search_product">RoomBidRent</string>
    <string name="title_activity_my_advert_step3">RoomBidRent</string>
    <string name="title_activity_saved_advert_step2">RoomBidRent</string>
    <string name="title_activity_create_advert_step7">RoomBidRent</string>
    <string name="title_activity_property_bid_list">RoomBidRent</string>
    <string name="title_activity_contact_though_message">RoomBidRent</string>
    <string name="title_activity_message_inbox">RoomBidRent</string>
    <string name="title_activity_message_show">RoomBidRent</string>

    <string-array name="ranking_list_items">
        <item>1__Property 1__$10__$100</item>
        <item>2__Property 2__$20__$200</item>
        <item>3__Property 3__$30__$300</item>
        <item>4__Property 4__$40__$400</item>
        <item>5__Property 5__$50__$500</item>
        <item>1__Property 1__$10__$100</item>
        <item>2__Property 2__$20__$200</item>
        <item>3__Property 3__$30__$300</item>
        <item>4__Property 4__$40__$400</item>
        <item>5__Property 5__$50__$500</item>
        <item>1__Property 1__$10__$100</item>
        <item>2__Property 2__$20__$200</item>
        <item>3__Property 3__$30__$300</item>
        <item>4__Property 4__$40__$400</item>
        <item>5__Property 5__$50__$500</item>
        <item>1__Property 1__$10__$100</item>
        <item>2__Property 2__$20__$200</item>
        <item>3__Property 3__$30__$300</item>
        <item>4__Property 4__$40__$400</item>
        <item>5__Property 5__$50__$500</item>
    </string-array>
    <string name="faq_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a sodales ante.
        In sit amet nulla id nisi faucibus tincidunt. Ut convallis, tortor id porttitor convallis, eros lorem lobortis
        ligula, et feugiat mi elit nec mauris. Nam quis ultricies nibh. Aliquam tincidunt dapibus malesuada. Aenean risus
        massa, accumsan non lacus ac, euismod mattis metus. Aliquam condimentum leo id eros elementum congue. Nullam
        molestie nulla nec dolor pretium porttitor. Nunc hendrerit suscipit ex quis semper. Orci varius natoque penatibus
        et magnis dis parturient montes, nascetur ridiculus mus. Mauris sit amet turpis lacus. Proin vulputate laoreet
        iaculis. Nulla id orci viverra, feugiat felis at, fermentum risus. In facilisis lorem ac nisl pretium pulvinar.
        Quisque vulputate quam sed sem fringilla, ac porta lorem tristique.</string>
    <string-array name="select_advert_spinner_options">
        <item>Advert 1</item>
        <item>Advert 2</item>
        <item>Advert 3</item>
        <item>Advert 4</item>
        <item>Advert 5</item>
        <item>Advert 6</item>
    </string-array>
    <string name="title_activity_manage_advert_stats_step1">RoomBidRent</string>
    <string name="title_activity_manage_advert_stats_step2">RoomBidRent</string>
    <string name="title_activity_message_sent">RoomBidRent</string>
    <string name="title_activity_property_place_bid">RoomBidRent</string>
    <string name="title_activity_create_advert_step8">RoomBidRent</string>
    <string-array name="bid_timer_spinner_options">
        <item>12 AM</item>
        <item>1 AM</item>
        <item>2 AM</item>
        <item>3 AM</item>
        <item>4 AM</item>
        <item>5 AM</item>
        <item>6 AM</item>
        <item>7 AM</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 PM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
        <item>11 PM</item>
    </string-array>
    <string name="title_activity_show_advert_product_details">RoomBidRent</string>
    <string name="title_activity_demo_pagination">RoomBidRent</string>
    <string name="title_activity_test">RoomBidRent</string>
    <string name="title_activity_email">RoomBidRent</string>
    <string name="title_activity_phone">RoomBidRent</string>
</resources>
