<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="auction.org.droidflatauction.SignUpStep5">
    <ImageButton
        android:id="@+id/sing_up_step5_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:src="@drawable/back_arrow"
        android:background="#fff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left"
        android:text="Before You Join"
        android:textColor="#2874b9"
        android:textSize="36dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/sign_up_joining_top_paragraph"
        android:textColor="#5a5a5a"
        android:textSize="16dp"
        android:textStyle="normal"
        android:lineSpacingExtra="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="left"
        android:text="@string/sign_up_joining_bottom_paragraph"
        android:textColor="#5a5a5a"
        android:textSize="16dp"
        android:textStyle="normal"
        android:lineSpacingExtra="10dp"/>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:stretchColumns="0,1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/sign_up_accept_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="Accept"
                android:textAllCaps="false"
                android:background="@drawable/custom_round_corner_orange_button" />
            <Button
                android:id="@+id/sign_up_decline_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="Decline"
                android:textAllCaps="false"
                android:background="@drawable/custom_round_corner_blue_button"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center_horizontal|center"
            android:text="@string/footer_note"
            android:background="#2874b9"
            android:textColor="#fff"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
