<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="auction.org.droidflatauction.NonMemberHome">
    <TextView
        android:id="@+id/non_member_welcome_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/non_member_home_welcome_note"
        android:textColor="#5a5a5a"
        android:textSize="24dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/non_member_paragraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/non_member_home_paragraph"
        android:textColor="#5a5a5a"
        android:textSize="14dp"
        android:textStyle="bold"
        android:lineSpacingExtra="10dp"/>
    <TableLayout
        android:id="@+id/step_table_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:stretchColumns="0,1,2,3">
        <TableRow
            android:id="@+id/step_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/steps1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/steps2"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/steps3"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/steps4"/>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:stretchColumns="0,1">
        <TableRow
            android:id="@+id/step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="Sign In"
                android:background="@drawable/custom_round_corner_orange_button"/>
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:textColor="#ffffff"
                android:textSize="18dp"
                android:text="Register"
                android:background="@drawable/custom_round_corner_orange_button"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/non_member_home_search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center_horizontal|center"
            android:background="@drawable/bg"
            android:textColor="#2874b9"
            android:text="Search"
            android:textSize="20dp"
            android:textAllCaps="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal|center"
            android:gravity="center_horizontal|center"
            android:text="@string/footer_note"
            android:background="#2874b9"
            android:textColor="#fff"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>

