<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    tools:context="auction.org.droidflatauction.SignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff" >
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/login_back_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/back_arrow"
                    android:background="#fff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:gravity="left"
                    android:text="Login"
                    android:textColor="#2874b9"
                    android:textSize="36dp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="left"
            android:text="@string/sign_in_welcome_note"
            android:textColor="#5a5a5a"
            android:textSize="24dp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="left"
            android:text="@string/sign_in_paragraph"
            android:textColor="#5a5a5a"
            android:textSize="16dp"
            android:textStyle="normal"
            android:lineSpacingExtra="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="left"
            android:text="Email Address"
            android:textColor="#f06226"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <EditText
            android:id="@+id/et_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="left"
            android:text="Password"
            android:textColor="#f06226"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAllCaps="true"/>
        <EditText
            android:id="@+id/et_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:text="Login"
            android:textAllCaps="false"
            android:background="@drawable/custom_round_corner_blue_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center_horizontal|center"
                android:text="@string/footer_note"
                android:background="#2874b9"
                android:textColor="#fff"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

