<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="auction.org.droidflatauction.CreateAdvertStep8"
    tools:showIn="@layout/app_bar_create_advert_step8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- <ImageButton
                android:id="@+id/create_advert_step8_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/back_arrow"
                android:background="#fff"/> -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="20dp"
                android:text="Step 8"
                android:textColor="#5a5a5a"
                android:textSize="16dp"
                android:textStyle="normal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="8dp"
                android:text="Daily Email Alerts"
                android:textColor="#2874b9"
                android:textSize="16dp"
                android:textStyle="bold" />
            <CheckBox
                android:id="@+id/daily_email_alerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="0dp"
                android:text="@string/daily_email_alerts"
                android:textColor="#5a5a5a"
                android:gravity="left|top"
                android:textSize="16dp"
                android:textStyle="normal"
                android:onClick="selectItem"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="8dp"
                android:text="Instant Email Alerts"
                android:textColor="#2874b9"
                android:textSize="16dp"
                android:textStyle="bold" />
            <CheckBox
                android:id="@+id/instant_email_alerts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="0dp"
                android:text="@string/instant_email_alerts"
                android:textColor="#5a5a5a"
                android:gravity="left|top"
                android:textSize="16dp"
                android:textStyle="normal"
                android:onClick="selectItem"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/create_advert_step8_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-25dp"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:src="@drawable/bold_back_arrow"
                android:background="#fff"/>
            <Button
                android:id="@+id/create_advert_submit_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:textColor="#ffffff"
                android:textSize="16dp"
                android:text="Submit"
                android:textAllCaps="false"
                android:background="@drawable/custom_round_corner_blue_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|center"
                android:gravity="center_horizontal|center"
                android:text="@string/footer_note"
                android:background="#2874b9"
                android:textColor="#fff"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

